--- a/manifest.json
+++ b/manifest.json
@@ -2,26 +2,10 @@
   "name": "Симулятор плохого Wi-Fi",
   "short_name": "Bad WiFi",
   "description": "Ностальгическое путешествие в эпоху dial-up",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#008080",
   "theme_color": "#c0c0c0",
   "orientation": "any",
-  "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "categories": ["entertainment", "utilities"],
-  "screenshots": [],
-  "prefer_related_applications": false
+  "categories": ["entertainment", "utilities"]
 }
